<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_gradient"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/weight_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/your_bmi"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bmi_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_background"
                android:backgroundTint="#FFFFFF"
                android:padding="20dp"
                android:text="@string/bmi"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/health_status"
                android:background="@drawable/rounded_background"
                android:backgroundTint="#FFFFFF"
                android:padding="6dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="321dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/weight_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/white"
                android:hint="@string/kg"
                android:inputType="numberDecimal"
                android:padding="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/enter_your_height"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/hi_ft"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/rounded_background"
                        android:backgroundTint="#FFFFFF"
                        android:hint="@string/feet"
                        android:textColor="@color/black"
                        android:inputType="numberDecimal"
                        android:padding="12dp" />

                    <EditText
                        android:id="@+id/hi_inc"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/rounded_background"
                        android:backgroundTint="#FFFFFF"
                        android:hint="@string/inch"
                        android:textColor="@color/black"
                        android:inputType="numberDecimal"
                        android:padding="12dp" />
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/black"
                android:padding="16dp"
                android:text="@string/calculate_bmi"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:text="@string/credit"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>